...
    <string name="homescreen_delete_vacation_message">Are you sure you want to delete this vacation?</string>
    <string name="homescreen_archive_message">Vacation archived!</string>
    <string name="homescreen_unarchive_message">Vacation unarchived!</string>
    <string name="homescreen_share_code_text">Your share code is :\ </string>
    <string name="homescreen_dialog_qrcode_title">QR CODE</string>

    <string name="detailsscreen_error_title">Your vacation</string>
    <string name="detailsscreen_dialog_address_title">ADDRESS</string>
    <string name="detailsscreen_error_no_days">No days added to this vacation yet.</string>
    <string name="detailsscreen_no_activities">No activities planned for this day.</string>
    <string name="detailsscreen_error_no_idea">No ideas for the moment</string>
    <string name="detailsscreen_idea_title">Some ideas :</string>
    <string name="detailsscreen_loading_vacation">Loading vacation details...</string>
    <string name="detailsscreen_edit_button">Edit</string>
    <string name="detailsscreen_share_button">Share</string>
    <string name="detailsscreen_share_bottomsheet_title">SHARE YOUR VACATION</string>
    <string name="detailsscreen_share_bottomsheet_text">Allow up to 5 people to view this vacation plan in read-only mode.</string>
...
    <string name="initscreen_next_button">NEXT</string>
    <string name="initscreen_date_title">Start date</string>
    <string name="initscreen_date_description">Select start date</string>
    <string name="initscreen_end_date_title">End date</string>
    <string name="initscreen_end_date_description">Select end date</string>

    <string name="activitiesscreen_title">What have you planned?</string>
    <string name="activitiesscreen_finish_button">FINISH</string>
    <string name="activitiesscreen_additional_info_title">Day notes</string>
    <string name="activitiesscreen_additional_info_description">With whom? Where? ...</string>
    <string name="activitiesscreen_activities_title">Activities</string>
    <string name="activitiesscreen_ideas_list_title">Ideas</string>
    <string name="activitiesscreen_ideas_title">Do you have any other ideas ?</string>
...
