...
                                                Color.White.copy(alpha = 0.1f)
                                            )
                                        ),
                                        shape = RoundedCornerShape(24.dp)
                                    )
                                    .clickable { onNavigate(AppDestinations.INIT_ROUTE) }
                                    .testTag("newVacationButton"),

                                contentAlignment = Alignment.Center
                            ) {
                                Row(
                                    verticalAlignment = Alignment.CenterVertically,
                                    horizontalArrangement = Arrangement.Center,
...
    MVIAppTheme {
        HomeScreenContent(
            vacationUiState = VacationUiViewState(
                vacations = listOf(
                    VacationDto(
                        id = 1,
                        name = "Paris",
                        startDate = "10/05/2023",
                        nbrDay = 3,
                        days = emptyList(),
                        ideas = emptyList(),
                        image = "vacation_ico",
                        isArchived = false
...
