...
    }

    Card(
        modifier = modifier
            .fillMaxWidth()
            .padding(start = 16.dp, end = 16.dp)
            .testTag("vacationCard"),
        border = BorderStroke(
            width = 3.dp,
            brush = Brush.verticalGradient(
                colors = listOf(
                    MaterialTheme.colorScheme.primary,
                    MaterialTheme.colorScheme.primary.copy(alpha = 0.4f),
...
                        focusedLabelColor = MaterialTheme.colorScheme.primary,
                        unfocusedLabelColor = MaterialTheme.colorScheme.primary
                    ),
                    label = { Text(stringResource(R.string.activitiesscreen_additional_info_description)) },
                    modifier = Modifier
                        .fillMaxWidth()
                        .testTag("activityAdditionalInfoTextField"),
                    singleLine = true
                )

                Spacer(modifier = Modifier.height(12.dp))

                Row(
...
